<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">OpenScout</string>
    <string name="title_activity_main" translatable="false">OpenScout</string>
    <string name="subtitle" translatable="false">Distributed Automated Situational Awareness</string>

    <!-- activity_serverlist.xml -->
    <string name="options_heading">Options</string>
    <string name="pref_title_recording">Show Screenshot/Recording Buttons</string>
    <string name="show_detections">Display Number of Detections</string>
    <string name="camera_option">Show Camera Toggling Button</string>
    <string name="serverlist_heading">Server List</string>
    <string name="name_subheading">Name</string>
    <string name="address_subheading">Address</string>
    <string name="name_hint">Server Name</string>
    <string name="address_hint" translatable="false">10.0.0.2[:9099]</string>
    <string name="backend_instructions">OpenScout requires a backend server to connect to. The cmu-demo-server can be used to test. You can setup your own backend server by following the instructions at https://github.com/cmusatyalab/openscout to launch the cmusatyalab/openscout Docker container.</string>
    <string name="error_empty">Name and address are required.</string>
    <string name="error_invalidURI">Server address is an invalid URI.</string>
    <string name="error_exists">A server by that name already exists.</string>
    <string name="server_removed">Removed server: </string>
    <string name="server_kept">Server retained.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="train">Train</string>
    <string name="training_dialog_title">Begin Training</string>
    <string name="training_name_prompt">Enter name of person:</string>
    <string name="training_in_progress">Training in progress for %s...</string>
    <string name="training_canceled">Training canceled.</string>
    <string name="training_succeeded">Training images sent to server successfully.</string>
    <string name="server_delete_prompt">Are you sure you wish to delete this server?</string>
    <string name="server_delete_title">Remove %s?</string>
    <string name="server_add_hovertext">Add Server</string>
    <string name="recording_complete">Video snippet saved to %s!</string>
    <string name="screenshot_taken">Screenshot saved to %s!</string>

    <string name="results_hint">Detection results will appear here. This pane is scrollable.</string>
    <string name="connecting_toast">Connecting to OpenScout server&#8230;</string>
    <string name="connection_error">Connection Error</string>
    <string name="could_not_connect">Could not connect</string>
    <string name="server_disconnected">Server Disconnected</string>
    <string name="server_error">Server Error</string>
    <string name="token_error">Error Getting Token</string>
    <string name="no_engine">Server is not running OpenScout</string>
    <string name="unspecified_error">Unspecified Error</string>
    <string name="back_button">Go Back</string>
    <string name="demo_server">cmu-demo-server</string>
    <string name="demo_dns">openscout-demo.cmusatyalab.org</string>
    <string name="enable_gps_text">OpenScout can use GPS to provide finer location for object it detects. Would you like to enable location services?</string>
    <string name="enable_gps_title">Enable GPS?</string>

    <string name="about_menu">About&#8230;</string>
    <string name="settings_menu">Settings&#8230;</string>
    <string name="tokenSize">Gabriel Token Size</string>
    <string name="about_title" translatable="false">OpenScout: Distributed Automated Situational Awareness</string>
    <string name="about_message" translatable="false">Client ID: %s\nVersion: %s\nCopyright &#169; 2020\nCarnegie Mellon University\nThis is a developing project.\n\nAll source code and documentation are under the Apache License, Version 2.0 (http://www.apache.org/licenses/LICENSE-2.0.html)</string>


    <!-- Glass Launch-related strings. -->
    <string name="start_gabriel_voice_trigger" translatable="false">Gabriel Assistant</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_ui">UI</string>

    <string name="pref_title_token_limit">Gabriel Token Limit</string>
    <string name="token_limit_summary">Controls how many frames can be in flight to Gabriel server</string>
    <string-array name="pref_token_list_titles">
        <item>No limit</item>
        <item>1 frame</item>
        <item>2 frames</item>
        <item>3 frames</item>
        <item>4 frames</item>
        <item>5 frames</item>
    </string-array>
    <string-array name="pref_token_list_values">
        <item>None</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="pref_header_experimental">Experimental</string>

    <string name="pref_title_resolution">Camera Resolution</string>
    <string-array name="pref_resolution_titles">
        <item>320x240 px</item>
        <item>640x480 px</item>
        <item>1280x720 px</item>
    </string-array>
    <string-array name="pref_resolution_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="pref_header_gps">Location (GPS/Network) Updates</string>
    <string name="pref_title_gpstime">Frequency (milliseconds)</string>
    <string name="pref_title_gpsdist">Distance (meters)</string>
    <string name="pref_results_opacity">Results Pane Opacity %</string>
    <string name="pref_show_training">Show Face Training Icon</string>
    <string name="backend">Backend</string>
    <string name="launch_text">Launch</string>
    <string name="backend_name">Name</string>
    <string name="resource_label">Resource</string>
    <string name="version_label">Version</string>
    <string name="find_cloudlet_title">Find Cloudlet</string>
    <string name="cloud_url">Cloud URL</string>
    <string name="find_cloudlets_menu">Find Cloudlets</string>
    <string name="title_activity_sinfonia">Sinfonia</string>
    <string name="cleanup_text">Cleanup</string>


</resources>
